Defined UPS commands combo and button in glade
No apparent reason to have placeholders in glade file that get destroyed
and recreated on startup. This should make migrating to GTK Builder
easier.

--- a/scripts/python/app/gui-1.3.glade
+++ b/scripts/python/app/gui-1.3.glade
@@ -1071,7 +1071,15 @@ want to delete from list...
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <child>
-                              <placeholder/>
+                              <widget class="GtkComboBox" id="ups_commands_combo">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                              </widget>
+                              <packing>
+                                <property name="expand">True</property>
+                                <property name="fill">True</property>
+                                <property name="position">0</property>
+                              </packing>
                             </child>
                             <child>
                               <widget class="GtkButton" id="ups_commands_button">
